--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar{
+  width: 100%;
+  height: 10vh;
+  padding: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+.navbar img{
+  width: 30px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.carrito{
+  width: 30px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.items{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.items a{
+  display: block;
+  margin: 10px;
+  color: rgb(80, 80, 80);
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+  animation-duration: 1s;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.items a:hover{
+  color: rgb(228, 12, 59);
+  transform: scale(1.1);
 }
