--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,22 @@
 a{
   text-decoration: none;
 }
+
+::-webkit-scrollbar{
+  width: 12px;
+
+}
+
+::-webkit-scrollbar-track{
+  background-color: var(--light);
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: var(--american-rose);
+  border: 1px solid var(--Cincinnati-Red);
+  border-radius: 20px;
+}
+
 /*Components Navbar */
 .logo{
   width: 35px;
@@ -52,11 +68,16 @@ a{
   align-items: center;
 }
 /*Components Item */
+.a-p-l{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .card{
   width: 75%;
   height: auto;
   margin: 20px;
-  padding: 0;
+  padding: 0 10px 0 10px;
   border: 1px solid;
   border-radius: 20px;
   border-color: var(--gris-light);
@@ -212,7 +233,7 @@ a{
 }
 .block-colour{
   width: 100%;
-  height: 25vh;
+  height: 17vh;
   background-color: var(--american-rose);
   border-radius: 0% 0% 8% 8% / 25% 25% 46% 46%;;
   position: relative;
@@ -221,10 +242,10 @@ a{
 
 .article-details{
   width: 80%;
-  height: auto;
   padding: 20px;
   background-color: var(--light);
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   border: 1px solid var(--gris-light);
@@ -234,28 +255,27 @@ a{
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .details{
-  width: 50%;
-  height: 100%;
+  width: 100%;
   padding: 20px;
   background-color: transparent;
 }
 .details h4{
   font-size: 24px;
   font-weight: 700;
-  text-align: left;
-  margin: 0 0 20px 0;
+  text-align: center;
+  margin: 0 0 10px 0;
 }
 .details .description{
   font-size: 1rem;
   font-weight: 500;
-  text-align: left;
-  margin: 0 0 20px 0;
+  text-align: center;
+  margin: 0 0 10px 0;
 }
 .memory{
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  margin:0 0 20px 0;
+  margin:0 0 10px 0;
 }
 .memory p{
   font-size: 1rem;
@@ -275,13 +295,14 @@ a{
   font-size: 2rem;
   font-weight: 700;
   text-align: left;
-  margin: 0 0 20px 0;
+  margin: 0 0 10px 0;
 }
 .extras-details p{
   font-size: 1rem;
   font-weight: 500;
   text-align: left;
   color: var(--gris-cemento);
+  margin: 0 0 10px 0;
 }
 .amout-details{
   display: flex;
@@ -310,7 +331,7 @@ a{
   width: 80%;
 }
 .btn-compra{
-  width: 90%;
+  width: 250px;
   height: 40px;
   background-color: var(--american-rose);
   border: 1px solid var(--american-rose);
@@ -326,72 +347,34 @@ a{
   background-color: var(--Cincinnati-Red);
 }
 
-.img-detail{
-  width: 50%;
-  height: 100%;
+.img-details{
+  width: 100%;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.img-detail img{
+.img-details img{
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
+.container-item-count{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .item-count{
-  width: 200px;
+  width: 100%;
   height: 50px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 0 0 0 40px;
+  margin: 10px 0 10px 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -414,13 +397,56 @@ a{
     padding: 0;
     margin: 0;
   }
+  .block-colour{
+    height: 30vh;
+  }
+  .article-details{
+    width: 80%;
+  }
+  .details{
+    width: 50%;
+    height: 100%;
+  }
+  .details h4{
+    text-align: left;
+    margin: 0 0 20px 0;
+  }
+  .details .description{
+    text-align: left;
+    margin: 0 0 20px 0;
+  }
+  .memory{
+    justify-content: flex-start;
+    align-items: center;
+    margin:0 0 20px 0;
+  }
+  .price-details{
+    margin: 0 0 20px 0;
+  }
+  .img-details{
+    width: 50%;
+    height: 100%;
+  }
+  .item-count{
+    width: 100%;
+  }
+  .btn-compra{
+    width: 350px;
+  }
 }
   
   @media screen and (min-width: 768px) {
-      
+      .item-count{
+        width: 80%;
+      }
 }
   
 @media screen and (min-width: 576px) {
-  
+  .block-colour{
+    height: 22vh;
+  }
+  .btn-compra{
+    width: 320px;
+  }
 
 }
