--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,7 @@
   --gris-cemento: rgb(102, 102, 102);
   --gris-light: rgb(168, 168, 168);
   --light: #fff;
+  --black: #000;
   --green: #008000;
   --dark-green: #006400;
 }
@@ -31,9 +32,17 @@ a{
 }
 
 /*Components Navbar */
-.logo{
-  width: 35px;
-  margin-right: 30px;
+.galaxi{
+  font-size: 1.1rem;
+  font-weight: 800;
+  color: var(--gris-cemento);
+  margin: 0 5px 0 0;
+}
+.store{
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--american-rose);
+  margin: 0 10px 0 20px;
 }
 .carrito{
   width: 24px;
@@ -65,8 +74,6 @@ a{
 /*main */
 /*Components ItemList */
 .container-card{
-  display: flex;
-  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
 }
@@ -164,6 +171,12 @@ a{
   *
   * @author jh3y
 */
+.container-animation{
+  display: block;
+  width: 100%;
+  height: 100vh;
+}
+
 @-webkit-keyframes waterfall {
   0% {
     opacity: 0;
@@ -227,11 +240,13 @@ a{
 
 /*Components ItemDetail */
 .section-detail{
+  width: 100%;
+  height: 105vh;
   position: relative;
   margin: 0;
   padding: 0 20px 0 20px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 .block-colour{
@@ -269,6 +284,7 @@ a{
   margin: 0 0 10px 0;
 }
 .details .description{
+  display: none;
   font-size: 1rem;
   font-weight: 500;
   text-align: center;
@@ -281,7 +297,7 @@ a{
   margin:0 0 10px 0;
 }
 .memory p{
-  font-size: 1rem;
+  font-size: 14px;
   font-weight: 500;
   color: var(--gris-cemento);
   margin: 10px;
@@ -379,7 +395,7 @@ a{
   margin: 10px 0 10px 0;
 }
 
-/* Component CartContainer*/
+/* Components CartContainer*/
 .container-cart{
   width: 98vw;
   height: 100vh;
@@ -431,6 +447,7 @@ a{
   justify-content: space-around;
   align-items: center;
 }
+
 .detail-products{
   display: flex;
   justify-content: space-between;
@@ -475,6 +492,8 @@ a{
   color: var(--light);
   margin: 5px 0 5px 0;
 }
+
+/* Components Cart*/
 .article-cart{
   width: 98%;
   height: 60px;
@@ -551,6 +570,69 @@ a{
   color: var(--light);
 }
 
+/* Components Footer*/
+.bg-dark{
+  background-color: var(--black) !important;
+}
+.footer-business{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+}
+.footer-business p{
+  font-size: 1rem;
+  font-weight: 600;
+}
+.footer-business ul li{
+  list-style: none;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.footer-product {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+}
+.footer-product p{
+  font-size: 1rem;
+  font-weight: 600;
+}
+.footer-product ul li{
+  list-style: none;
+}
+.footer-product ul li a{
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--light);
+}
+.footer-card{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+}
+.footer-card div img{
+  width: 25px;
+  margin: 5px;
+  border-radius:5px;
+}
+.autor{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.autor p{
+  text-align: center;
+  font-size: 10px;
+  font-weight: 600;
+  margin: 15px 0 10px 0;
+}
 
 @media screen and (min-width: 992px) {
   main{
@@ -558,6 +640,10 @@ a{
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+  }
+  .section-detail{
+    width: 100%;
+    height: 112vh;
   }
   .card{
     width: 270px;
@@ -640,6 +726,9 @@ a{
 }
   
 @media screen and (min-width: 576px) {
+  .details .description{
+    display: block;
+  }
   .block-colour{
     height: 22vh;
   }
